Creacion de la base de datos

--- a/equipo-verde/Proyecto Final/Proyecto Final.csproj
+++ b/equipo-verde/Proyecto Final/Proyecto Final.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Coordinator.Designer.cs">
       <DependentUpon>Coordinator.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataContext.cs" />
     <Compile Include="Entidades\Adviser.cs" />
     <Compile Include="Entidades\Coach.cs" />
     <Compile Include="Entidades\Company.cs" />
