--- a/equipo-verde/Proyecto Final/App.config
+++ b/equipo-verde/Proyecto Final/App.config
@@ -12,4 +12,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add
+		name="miConexion"
+		connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=BDCoach;Integrated Security=True;"
+		providerName="System.Data.SqlClient"/>
+	</connectionStrings>
+		
 </configuration>
