se realizo el codigo de la Clase Major y el diseño de la forma Student

--- a/equipo-verde/Proyecto Final/Proyecto Final.csproj
+++ b/equipo-verde/Proyecto Final/Proyecto Final.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Entidades\Company.cs" />
     <Compile Include="Entidades\Contact.cs" />
     <Compile Include="Entidades\Coordinator.cs" />
+    <Compile Include="Entidades\keyAttribute.cs" />
     <Compile Include="Entidades\Major.cs" />
     <Compile Include="Entidades\Student.cs" />
     <Compile Include="Major.cs">
