--- a/equipo-verde/Proyecto Final/Proyecto Final.csproj
+++ b/equipo-verde/Proyecto Final/Proyecto Final.csproj
@@ -111,6 +111,12 @@
     <Compile Include="Major.Designer.cs">
       <DependentUpon>Major.cs</DependentUpon>
     </Compile>
+    <Compile Include="Menu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Menu.Designer.cs">
+      <DependentUpon>Menu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\202105122317465_Datos.cs" />
     <Compile Include="Migrations\202105122317465_Datos.designer.cs">
       <DependentUpon>202105122317465_Datos.cs</DependentUpon>
@@ -141,6 +147,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Major.resx">
       <DependentUpon>Major.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Menu.resx">
+      <DependentUpon>Menu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202105122317465_Datos.resx">
       <DependentUpon>202105122317465_Datos.cs</DependentUpon>
